--- a/src/components/nornMinehunter.module.scss
+++ b/src/components/nornMinehunter.module.scss
@@ -16,11 +16,6 @@
 
 .argNodes {
   @include argNodesTemplate;
-  grid-template-columns: 170px 90px 5px 60px 5px 60px;
-}
-
-.argNodesMobile {
-  @include argNodesTemplate;
   grid-template-columns: 100px 5px 60px 5px 60px;
 }
 
@@ -32,6 +27,7 @@
 .display_name {
   text-align: center;
   font-size: 18px;
+  width: 170px;
 }
 
 .argNodesSelect {
